--- a/src/main/resources/apis.properties
+++ b/src/main/resources/apis.properties
@@ -1,3 +1,3 @@
-api.stock.url=http://localhost:5000
-api.payment.url=http://localhost:5001
-api.shipment.url=http://localhost:5002
+api.stock.url=http://localhost:5000/order
+api.payment.url=http://localhost:5001/payment
+api.shipment.url=http://localhost:5002/shipment
