--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ timeZone=Asia/Beirut
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/test_pepe?serverTimezone=${timeZone}
+spring.datasource.url=jdbc:mysql://localhost:3306/camunda_poc?serverTimezone=${timeZone}
 spring.datasource.username=root
 spring.datasource.password=root
 
